--- a/portfolio.html
+++ b/portfolio.html
@@ -220,48 +220,49 @@
     </main>
     <!--Підвал-->
     <footer class="footer">
-        <div class="container footer-block">
-            <div class="footer-first">
-                <a href="./index.html" class="logo">Web<span class="footer__logo">Studio</span></a>
+        <div class="container footer__block">
+            <div class="footer__first">
+                <a href="./index.html" class="logo">Web<span class="footer__logo--white">Studio</span></a>
                 <address>
-                    <ul class="address-nav">
-                        <li class="footer-item"><a href="" target="_blank" rel="noopener noreferrer"
+                    <ul class="footer-address">
+                        <li class="footer-address__item"><a href="" target="_blank" rel="noopener noreferrer"
                                 class="link link-address">м. Київ, пр-т
                                 Лесі
                                 Українки,26</a>
                         </li>
-                        <li class="footer-item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+                        <li class="footer-address__item"><a href="mailto:info@devstudio.com"
+                                class="link">info@devstudio.com</a>
                         </li>
-                        <li class="footer-item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+                        <li class="footer-address__item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
                     </ul>
                 </address>
             </div>
-            <div class="footer-second">
+            <div class="footer__second">
                 <h2 class="socials-signin">приєднуйтесь</h2>
                 <ul class="socials">
                     <li class="socials__items">
-                        <a href="#" class="socials__link footer-link" target="_blank" rel="noopener norefferer">
+                        <a href="#" class="socials__link socials__link--footer" target="_blank" rel="noopener norefferer">
                             <svg class="icon icon-instagram-1" width="20" height="20">
                                 <use xlink:href="./images/icons.svg#icon-instagram-1"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="socials__items">
-                        <a href="#" class="socials__link footer-link" target="_blank" rel="noopener norefferer">
+                        <a href="#" class="socials__link socials__link--footer" target="_blank" rel="noopener norefferer">
                             <svg class="icon icon-twitter-1" width="20" height="20">
                                 <use xlink:href="./images/icons.svg#icon-twitter-1"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="socials__items">
-                        <a href="#" class="socials__link footer-link" target="_blank" rel="noopener norefferer">
+                        <a href="#" class="socials__link socials__link--footer" target="_blank" rel="noopener norefferer">
                             <svg class="icon icon-facebook-1" width="20" height="20">
                                 <use xlink:href="./images/icons.svg#icon-facebook-1"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="socials__items">
-                        <a href="#" class="socials__link footer-link" target="_blank" rel="noopener norefferer">
+                        <a href="#" class="socials__link socials__link--footer" target="_blank" rel="noopener norefferer">
                             <svg class="icon icon-linkedin-1" width="20" height="20">
                                 <use xlink:href="./images/icons.svg#icon-linkedin-1"></use>
                             </svg>
@@ -269,18 +270,18 @@
                     </li>
                 </ul>
             </div>
-            <div class="footer-third">
+            <div class="footer__third">
                 <h2 class="socials-signin">Підпишіться на розсилку</h2>
-                <form action="#" name="form-subscribe" class="form-subscribe">
+                <form action="#" name="form-subscribe" class="footer-form__subscribe">
                     <input type="email" name="email-subscribe" id="email-subscribe" placeholder="E-mail"
-                        class="email-subscribe">
-                    <button type="submit" class="btn-subscribe"> Підписатися
+                        class="footer-form__email">
+                    <button type="submit" class="button footer-form__button"> Підписатися
                         <svg class="icon icon-icon-send" width="24" height="24">
                             <use xlink:href="./images/icons.svg#icon-icon-send"></use>
                         </svg>
                     </button>
                 </form>
-
+    
             </div>
         </div>
     </footer>
