--- a/index.html
+++ b/index.html
@@ -391,9 +391,11 @@
                                 Лесі
                                 Українки,26</a>
                         </li>
-                        <li class="footer-address__item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+                        <li class="footer-address__item"><a href="mailto:info@devstudio.com"
+                                class="link">info@devstudio.com</a>
                         </li>
-                        <li class="footer-address__item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+                        <li class="footer-address__item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+                        </li>
                     </ul>
                 </address>
             </div>
@@ -401,28 +403,32 @@
                 <h2 class="socials-signin">приєднуйтесь</h2>
                 <ul class="socials">
                     <li class="socials__items">
-                        <a href="#" class="socials__link socials__link--footer" target="_blank" rel="noopener norefferer">
+                        <a href="#" class="socials__link socials__link--footer" target="_blank"
+                            rel="noopener norefferer">
                             <svg class="icon icon-instagram-1" width="20" height="20">
                                 <use xlink:href="./images/icons.svg#icon-instagram-1"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="socials__items">
-                        <a href="#" class="socials__link socials__link--footer" target="_blank" rel="noopener norefferer">
+                        <a href="#" class="socials__link socials__link--footer" target="_blank"
+                            rel="noopener norefferer">
                             <svg class="icon icon-twitter-1" width="20" height="20">
                                 <use xlink:href="./images/icons.svg#icon-twitter-1"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="socials__items">
-                        <a href="#" class="socials__link socials__link--footer" target="_blank" rel="noopener norefferer">
+                        <a href="#" class="socials__link socials__link--footer" target="_blank"
+                            rel="noopener norefferer">
                             <svg class="icon icon-facebook-1" width="20" height="20">
                                 <use xlink:href="./images/icons.svg#icon-facebook-1"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="socials__items">
-                        <a href="#" class="socials__link socials__link--footer" target="_blank" rel="noopener norefferer">
+                        <a href="#" class="socials__link socials__link--footer" target="_blank"
+                            rel="noopener norefferer">
                             <svg class="icon icon-linkedin-1" width="20" height="20">
                                 <use xlink:href="./images/icons.svg#icon-linkedin-1"></use>
                             </svg>
