--- a/portfolio.html
+++ b/portfolio.html
@@ -69,148 +69,148 @@
             </div>
             <!--Перелік робіт-->
             <div class="container">
-                <ul class="work-list">
+                <ul class="work__list">
                     <li class="works">
                         <a href="#" target="_blank" rel="noopener norefferer">
-                            <div class="work-appear">
+                            <div class="work__appear">
 
                                 <img class="work-image" src="./images/our-people-laptop.jpeg"
                                     alt="Ноутбук з прикладом створеного сайту" width="370" height="294">
-                                <p class="work-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу
+                                <p class="work__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу
                                     та сервісів. Все це
                                     дозволить відвідувачу отримати
                                     вичерпні відомості про компанію чи приватну особу.</p>
                             </div>
-                            <div class="work-add">
-                                <h2 class="work-title">Технокряк</h2>
-                                <p class="work-type">Веб-сайт</p>
+                            <div class="work__add">
+                                <h2 class="work__title">Технокряк</h2>
+                                <p class="work__type">Веб-сайт</p>
                             </div>
                         </a>
                     </li>
                     <li class="works">
                         <a href="#" target="_blank" rel="noopener norefferer">
-                            <div class="work-appear">
+                            <div class="work__appear">
                                 <img class="work-image" src="./images/basketball.jpeg"
                                     alt="Постер для баскетбольної гри" width="370" height="294">
-                                <p class="work-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу
+                                <p class="work__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу
                                     та сервісів. Все це
                                     дозволить відвідувачу отримати
                                     вичерпні відомості про компанію чи приватну особу.</p>
                             </div>
-                            <div class="work-add">
-                                <h2 class="work-title">Постер New Orlean vs Golden Star</h2>
-                                <p class="work-type">Дизайн</p>
+                            <div class="work__add">
+                                <h2 class="work__title">Постер New Orlean vs Golden Star</h2>
+                                <p class="work__type">Дизайн</p>
                             </div>
                         </a>
                     </li>
                     <li class="works">
                         <a href="#" target="_blank" rel="noopener norefferer">
-                            <div class="work-appear">
+                            <div class="work__appear">
                                 <img class="work-image" src="./images/seafood.jpeg"
                                     alt="Вивіска для ресторану з морською їжею" width="370" height="294">
-                                <p class="work-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу
+                                <p class="work__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу
                                     та сервісів. Все це
                                     дозволить відвідувачу отримати
                                     вичерпні відомості про компанію чи приватну особу.</p>
                             </div>
-                            <div class="work-add">
-                                <h2 class="work-title">Ресторан Seafood</h2>
-                                <p class="work-type">Додаток</p>
+                            <div class="work__add">
+                                <h2 class="work__title">Ресторан Seafood</h2>
+                                <p class="work__type">Додаток</p>
                             </div>
                         </a>
                     </li>
                     <li class="works">
                         <a href="#" target="_blank" rel="noopener norefferer">
-                            <div class="work-appear">
+                            <div class="work__appear">
                                 <img class="work-image" src="./images/headphone.jpeg" alt="Навушники" width="370"
                                     height="294">
-                                <p class="work-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу
+                                <p class="work__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу
                                     та сервісів. Все це
                                     дозволить відвідувачу отримати
                                     вичерпні відомості про компанію чи приватну особу.</p>
                             </div>
-                            <div class="work-add">
-                                <h2 class="work-title">Проєкт Prime</h2>
-                                <p class="work-type">Маркетинг</p>
+                            <div class="work__add">
+                                <h2 class="work__title">Проєкт Prime</h2>
+                                <p class="work__type">Маркетинг</p>
                             </div>
                         </a>
                     </li>
                     <li class="works">
                         <a href="#" target="_blank" rel="noopener norefferer">
-                            <div class="work-appear">
+                            <div class="work__appear">
                                 <img class="work-image" src="./images/boxes.jpeg" alt="Коробки" width="370"
                                     height="294">
-                                <p class="work-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу
+                                <p class="work__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу
                                     та сервісів. Все це
                                     дозволить відвідувачу отримати
                                     вичерпні відомості про компанію чи приватну особу.</p>
                             </div>
-                            <div class="work-add">
-                                <h2 class="work-title">Проєкт Boxes</h2>
-                                <p class="work-type">Додаток</p>
+                            <div class="work__add">
+                                <h2 class="work__title">Проєкт Boxes</h2>
+                                <p class="work__type">Додаток</p>
                             </div>
                         </a>
                     </li>
                     <li class="works">
                         <a href="#" target="_blank" rel="noopener norefferer">
-                            <div class="work-appear">
+                            <div class="work__appear">
                                 <img class="work-image" src="./images/computer.jpeg" alt="Ноутбук зі створеним сайтом"
                                     width="370" height="294">
-                                <p class="work-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу
+                                <p class="work__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу
                                     та сервісів. Все це
                                     дозволить відвідувачу отримати
                                     вичерпні відомості про компанію чи приватну особу.</p>
                             </div>
-                            <div class="work-add">
-                                <h2 class="work-title">Inspiration has no Borders</h2>
-                                <p class="work-type">Веб-сайт</p>
+                            <div class="work__add">
+                                <h2 class="work__title">Inspiration has no Borders</h2>
+                                <p class="work__type">Веб-сайт</p>
                             </div>
                         </a>
                     </li>
                     <li class="works">
                         <a href="#" target="_blank" rel="noopener norefferer">
-                            <div class="work-appear">
+                            <div class="work__appear">
                                 <img class="work-image" src="./images/book.jpeg" alt="Книга з обмеженим виданням"
                                     width="370" height="294">
-                                <p class="work-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу
+                                <p class="work__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу
                                     та сервісів. Все це
                                     дозволить відвідувачу отримати
                                     вичерпні відомості про компанію чи приватну особу.</p>
                             </div>
-                            <div class="work-add">
-                                <h2 class="work-title">Видання Limited Edition</h2>
-                                <p class="work-type">Дизайн</p>
+                            <div class="work__add">
+                                <h2 class="work__title">Видання Limited Edition</h2>
+                                <p class="work__type">Дизайн</p>
                             </div>
                         </a>
                     </li>
                     <li class="works">
                         <a href="#" target="_blank" rel="noopener norefferer">
-                            <div class="work-appear">
+                            <div class="work__appear">
                                 <img class="work-image" src="./images/label.jpeg" alt="Лейб" width="370" height="294">
-                                <p class="work-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу
+                                <p class="work__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу
                                     та сервісів. Все це
                                     дозволить відвідувачу отримати
                                     вичерпні відомості про компанію чи приватну особу.</p>
                             </div>
-                            <div class="work-add">
-                                <h2 class="work-title">Проєкт LAB</h2>
-                                <p class="work-type">Маркетинг</p>
+                            <div class="work__add">
+                                <h2 class="work__title">Проєкт LAB</h2>
+                                <p class="work__type">Маркетинг</p>
                             </div>
                         </a>
                     </li>
                     <li class="works">
                         <a href="#" target="_blank" rel="noopener norefferer">
-                            <div class="work-appear">
+                            <div class="work__appear">
                                 <img class="work-image" src="./images/growing-business.jpeg" alt="Додаток для бізнесу"
                                     width="370" height="294">
-                                <p class="work-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу
+                                <p class="work__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу
                                     та сервісів. Все це
                                     дозволить відвідувачу отримати
                                     вичерпні відомості про компанію чи приватну особу.</p>
                             </div>
-                            <div class="work-add">
-                                <h2 class="work-title">Growing Business</h2>
-                                <p class="work-type">Додаток</p>
+                            <div class="work__add">
+                                <h2 class="work__title">Growing Business</h2>
+                                <p class="work__type">Додаток</p>
                             </div>
                         </a>
                     </li>
